# f2rs

./: .gitignore  Cargo.toml  README.md  README_OLD.md  _config.yml  ex.rs  in.f90  in2.f90
.github/: FUNDING.yml
docs/: README.md  _config.yml
example-project/: Cargo.toml  f2rs.toml
example-project/fortran/: a.f90  goto.f90  input.f90  some_module.f90
example-project/src/: main.rs  pp.rs
f2rs/: Cargo.toml
f2rs-adapter/: Cargo.toml
f2rs-adapter-derive/: Cargo.toml
f2rs-adapter-derive/src/: lib.rs
f2rs-adapter/src/: common_operations.rs  iso_c_binding.rs  lib.rs  pow_operation.rs  types.rs
f2rs-parse/: Cargo.toml
f2rs-parse-derive/: Cargo.toml
f2rs-parse-derive/src/: lib.rs
f2rs-parse/f2rs-parse-derive/: Cargo.toml
f2rs-parse/f2rs-parse-derive/src/: lib.rs  rules-18-007r1.rs
f2rs-parse/src/: cfg.rs  lib.rs  rules.rs
f2rs-parse/src/rules/: a.js  attributes.rs  concepts.rs  constants.rs  execution_control.rs  expression.rs  input_output_editing.rs  literals.rs  operators.rs  procedures.rs  program_units.rs  statements.rs  tokens.rs  types.rs  utils.rs
f2rs-parse/src/rules/attributes/: attribute_specification_statements.rs  import_stmt.rs
f2rs-parse/src/rules/input_output_editing/: format.rs
f2rs-parse/src/rules/report/: rules-18-007r1.md
f2rs-parse/src/rules/types/: derived.rs  enumerations.rs  intrinsics.rs
f2rs-parse2/: Cargo.toml  report.md  report.nu
f2rs-parse2/src/: cfg.rs  congruent.f90  lib.rs  main.rs  main_OLD.rs  phases.rs  statement.rs  tokens.rs
f2rs-parse2/src/statement/: a.md  rules.rs
f2rs-parse2/src/statement/rules/: attributes.rs  concepts.rs  constants.rs  execution_control.rs  expression.rs  literals.rs  procedures.rs  statements.rs
f2rs-parse2/src/statement/rules/attributes/: attribute_specification_statements.rs  import_stmt.rs
f2rs-parse2/src/statement/rules/input_output_editing/: format.rs
f2rs-parse2/src/statement/rules/types/: derived.rs  enumerations.rs  intrinsics.rs
f2rs-parse2/src/statement/rules/types/enumeration_tests/: example_1.f90
f2rs-parse2/src/tokens/: fix.py  line.rs  rules.rs
f2rs-parser-combinator/: Cargo.toml
f2rs-parser-combinator/src/: lib.rs  main.rs  main_.rs  provided.rs  tokenization.rs
f2rs/src/: code_gen.rs  lib.rs  main.rs  parse.rs  programs.rs
f2rs/src/code_gen/: element.rs  item.rs
f2rs/src/code_gen/element/: function.rs  module.rs  program.rs
f2rs/src/code_gen/element/statement/: do_loop.rs  if_statement.rs  special_function.rs  use_stmnt.rs
f2rs/src/parse/: elements.rs  function.rs
f2rs/src/parse/elements/: comment.rs  eol.rs  expression.rs  integer.rs  keyword.rs  literals.rs  operator.rs  space.rs  statement.rs  type_.rs
f2rs/src/parse/elements/expression/: if_arithmetic.rs  index_range.rs  monome.rs  operation.rs
f2rs/src/parse/elements/statement/: call_statement.rs  do_loop.rs  format_statement.rs  if_statement.rs  implicit.rs  special_function.rs  use_statement.rs  variables_declaration.rs
f2rs/src/parse/elements/statement/do_loop/: test_1.f90
f2rs/src/parse/elements/statement/if_statement/: test_1.f90
f2rs_OLD/: Cargo.toml
f2rs_OLD/src/: code_gen.rs  parse.rs
f2rs_OLD/src/code_gen/: ctx.rs
f2rs_OLD/src/code_gen/element/: statement.rs  struct_type.rs  subroutine.rs
f2rs_OLD/src/code_gen/element/statement/: expression.rs  variables_declaration.rs
f2rs_OLD/src/parse/: elements.rs
f2rs_OLD/src/parse/elements/: integer.rs  statement.rs  type_.rs
f2rs_OLD/src/parse/elements/expression/: monome.rs
f2rs_OLD/src/parse/elements/statement/: call_statement.rs  do_loop.rs  format_statement.rs  use_statement.rs
f2rs_OLD/src/parse/elements/statement/do_loop/: test_2.f90
f2rs_OLD/src/parse/elements/statement/if_statement/: test_2.f90
resources/: .gitignore  18-007r1.rules.yaml  extract.py  run.py  run_18_007r1.py
src/: _indent.rs  main.rs  parse.rs  program.rs  statement.rs  testing.rs
xtask/: Cargo.toml
(+46 files in other folders)
