[package]
name = "f2rs-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
f128 = { version = "0.2.9", optional = true }
num = "0.4.1"

[features]
default=[]
f128 = ["dep:f128"]
default-integer-precision-8 = []
default-integer-precision-16 = []
default-integer-precision-32 = []
default-integer-precision-64 = []
default-integer-precision-128 = []
default-real-precision-32 = []
default-real-precision-64 = []
default-real-precision-128 = []
