[package]
name = "f2rs-parse2"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
console = "0.15.8"
enum-as-inner = "0.6.0"
enum-iterator = "1.4.1"
env_logger = "0.11.3"
f2rs-parse-derive = { version = "0.1.0", path = "../f2rs-parse-derive" }
f2rs-parser-combinator = { version = "0.1.0", path = "../f2rs-parser-combinator" }
log = "0.4.21"
paste = "1.0.14"
