[package]
name = "f2rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-as-inner = "0.6.0"
riddle = { version = "0.1.0", path = "../../../../Desktop/riddle" }
#proc-macro2 = "1.0.66"
#syn = { version = "2.0.28", features = ["full"] }
#ndarray = "0.15.6"
