[package]
name = "f2rs"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
f2rs-parse2 = { version = "0.1.0", path = "../f2rs-parse2" }
colored = "2.1.0"
f2rs-parser-combinator = { version = "0.1.0", path = "../f2rs-parser-combinator" }