[package]
name = "f2rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
enum-as-inner = "0.6.0"
f2rs-parser-combinator = { version = "0.1.0", path = "../f2rs-parser-combinator" }
pathdiff = "0.2.1"
toml = "0.8.8"
#proc-macro2 = "1.0.66"
#syn = { version = "2.0.28", features = ["full"] }
#ndarray = "0.15.6"
