[package]
name = "f2rs-parse-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
f2rs-parser-combinator = { version = "0.1.0", path = "../../f2rs-parser-combinator" }
paste = "1.0.14"
proc-macro2 = "1.0.70"
quote = "1.0.33"
syn = { version = "2.0.41", features = ["full"] }
